k8s/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  template:
    spec:
      containers:
        - name: hello-world-image
